@@ -16,139 +16,218 @@ public class ServiceRequestServiceImpl implements ServiceRequestService {
     private final ServiceRequestDao dao;
     private final ConnectionProvider connections;
 
-    // Dependency Injection hoàn chỉnh, không có "new" bậy bạ
-    public ServiceRequestServiceImpl(ServiceRequestDao dao, ConnectionProvider connections) {
+    public ServiceRequestServiceImpl(
+            ServiceRequestDao dao,
+            ConnectionProvider connections
+    ) {
         this.dao = dao;
         this.connections = connections;
     }
 
     @Override
     public List<ServiceRequestDto> getPendingRequests() {
-        try (Connection c = connections.getConnection()) {
-            return dao.findPending(c);
-        } catch (SQLException e) {
-            throw data("Unable to fetch pending requests", e);
+        try (Connection connection = connections.getConnection()) {
+            return dao.findPending(connection);
+        } catch (SQLException exception) {
+            throw data("Không thể tải danh sách yêu cầu dịch vụ chờ nhận.", exception);
         }
     }
 
     @Override
-    public List<ServiceRequestDto> getMyTasks(long staffId) {
-        try (Connection c = connections.getConnection()) {
-            return dao.findAssignedTo(c, staffId);
-        } catch (SQLException e) {
-            throw data("Unable to fetch my tasks", e);
+    public List<ServiceRequestDto> getMyRequests(long staffId) {
+        try (Connection connection = connections.getConnection()) {
+            return dao.findAssignedTo(connection, staffId);
+        } catch (SQLException exception) {
+            throw data("Không thể tải danh sách yêu cầu dịch vụ của bạn.", exception);
         }
     }
 
     @Override
-    public void acceptTask(long requestId, long staffId) throws BusinessException {
-        tx(c -> {
-            ServiceRequestDto req = dao.findById(c, requestId, true)
-                    .orElseThrow(() -> new BusinessException("Yêu cầu không tồn tại hoặc đã bị xóa."));
+    public void acceptRequest(long requestId, long staffId)
+            throws BusinessException {
+        tx(connection -> {
+            ServiceRequestDto request = findForUpdate(connection, requestId);
 
-            if (!"PENDING".equals(req.status())) {
-                throw new BusinessException("Chỉ có thể nhận yêu cầu đang ở trạng thái chờ (PENDING).");
+            if (!"PENDING".equals(request.status())) {
+                throw new BusinessException(
+                        "Chỉ có thể nhận yêu cầu đang chờ tiếp nhận."
+                );
             }
-            dao.updateStatusAndStaff(c, requestId, "ASSIGNED", staffId);
+
+            ensureUpdated(dao.updateStatusAndStaff(
+                    connection,
+                    requestId,
+                    "ASSIGNED",
+                    staffId
+            ));
+
             return null;
         });
     }
 
     @Override
-    public void startTask(long requestId, long staffId) throws BusinessException {
-        tx(c -> {
-            ServiceRequestDto req = dao.findById(c, requestId, true)
-                    .orElseThrow(() -> new BusinessException("Yêu cầu không tồn tại."));
+    public void startRequest(long requestId, long staffId)
+            throws BusinessException {
+        tx(connection -> {
+            ServiceRequestDto request = findForUpdate(connection, requestId);
+            validateOwnership(request, staffId);
 
-            validateOwnership(req, staffId);
-            if (!"ASSIGNED".equals(req.status())) {
-                throw new BusinessException("Chỉ có thể bắt đầu yêu cầu đã được giao (ASSIGNED).");
+            if (!"ASSIGNED".equals(request.status())) {
+                throw new BusinessException(
+                        "Chỉ có thể bắt đầu yêu cầu đã được nhận."
+                );
             }
-            dao.updateStatusAndStaff(c, requestId, "IN_PROGRESS", staffId);
+
+            ensureUpdated(dao.updateStatusAndStaff(
+                    connection,
+                    requestId,
+                    "IN_PROGRESS",
+                    staffId
+            ));
+
             return null;
         });
     }
 
     @Override
-    public void completeTask(long requestId, long staffId) throws BusinessException {
-        tx(c -> {
-            ServiceRequestDto req = dao.findById(c, requestId, true)
-                    .orElseThrow(() -> new BusinessException("Yêu cầu không tồn tại."));
+    public void completeRequest(long requestId, long staffId)
+            throws BusinessException {
+        tx(connection -> {
+            ServiceRequestDto request = findForUpdate(connection, requestId);
+            validateOwnership(request, staffId);
 
-            validateOwnership(req, staffId);
-            if (!"IN_PROGRESS".equals(req.status())) {
-                throw new BusinessException("Chỉ có thể hoàn thành yêu cầu đang thực hiện (IN_PROGRESS).");
+            if (!"IN_PROGRESS".equals(request.status())) {
+                throw new BusinessException(
+                        "Chỉ có thể hoàn thành yêu cầu đang thực hiện."
+                );
             }
-            dao.updateStatusAndStaff(c, requestId, "COMPLETED", staffId);
+
+            ensureUpdated(dao.updateStatusAndStaff(
+                    connection,
+                    requestId,
+                    "COMPLETED",
+                    staffId
+            ));
+
             return null;
         });
     }
+
     @Override
-    public void cancelTask(long requestId, long staffId, String reason) throws BusinessException {
-        // 1. Validate dữ liệu đầu vào
-        if (reason == null || reason.trim().isEmpty()) {
-            throw new BusinessException("Lý do hủy là bắt buộc. Vui lòng nhập lý do.");
+    public void cancelRequest(
+            long requestId,
+            long staffId,
+            String cancellationReason
+    ) throws BusinessException {
+        if (cancellationReason == null || cancellationReason.isBlank()) {
+            throw new BusinessException("Lý do hủy là bắt buộc.");
         }
 
-        tx(c -> {
-            // 2. Lấy dữ liệu kèm Lock (Chống tranh chấp)
-            ServiceRequestDto req = dao.findById(c, requestId, true)
-                    .orElseThrow(() -> new BusinessException("Yêu cầu không tồn tại."));
+        tx(connection -> {
+            ServiceRequestDto request = findForUpdate(connection, requestId);
 
-            // 3. Kiểm tra các điều kiện nghiệp vụ cốt lõi
-            if ("COMPLETED".equals(req.status())) {
-                throw new BusinessException("Không thể hủy dịch vụ do đã hoàn thành.");
-            }
-            if ("CANCELLED".equals(req.status())) {
-                throw new BusinessException("Yêu cầu này đã bị hủy trước đó.");
+            if ("COMPLETED".equals(request.status())) {
+                throw new BusinessException(
+                        "Không thể hủy yêu cầu đã hoàn thành."
+                );
             }
 
-            // 4. Kiểm tra quyền sở hữu (Nếu task đã có người nhận, chỉ người đó mới được hủy)
-            if (req.assignedStaffId() != null && req.assignedStaffId() != staffId) {
-                throw new BusinessException("Bạn không thể hủy yêu cầu đang được thực hiện bởi nhân viên khác.");
+            if ("CANCELLED".equals(request.status())) {
+                throw new BusinessException("Yêu cầu này đã được hủy.");
             }
 
-            // 5. Cập nhật DB
-            dao.cancelRequest(c, requestId, reason.trim());
+            if (request.assignedStaffId() != null
+                    && request.assignedStaffId() != staffId) {
+                throw new BusinessException(
+                        "Bạn không thể hủy yêu cầu do nhân viên khác xử lý."
+                );
+            }
+
+            ensureUpdated(dao.cancelRequest(
+                    connection,
+                    requestId,
+                    cancellationReason.trim()
+            ));
+
             return null;
         });
     }
 
-    private void validateOwnership(ServiceRequestDto req, long staffId) throws BusinessException {
-        if (req.assignedStaffId() == null || req.assignedStaffId() != staffId) {
-            throw new BusinessException("Bạn không có quyền xử lý yêu cầu của người khác.");
+    private ServiceRequestDto findForUpdate(
+            Connection connection,
+            long requestId
+    ) throws SQLException, BusinessException {
+        return dao.findById(connection, requestId, true)
+                .orElseThrow(() -> new BusinessException(
+                        "Yêu cầu dịch vụ không tồn tại."
+                ));
+    }
+
+    private void validateOwnership(ServiceRequestDto request, long staffId)
+            throws BusinessException {
+        if (request.assignedStaffId() == null
+                || request.assignedStaffId() != staffId) {
+            throw new BusinessException(
+                    "Bạn không có quyền xử lý yêu cầu của nhân viên khác."
+            );
         }
     }
 
-    private DataAccessException data(String m, SQLException e) {
-        return new DataAccessException(m, e);
+    private void ensureUpdated(int affectedRows) throws BusinessException {
+        if (affectedRows != 1) {
+            throw new BusinessException(
+                    "Không thể cập nhật yêu cầu dịch vụ. Vui lòng thử lại."
+            );
+        }
     }
 
-    // Helper quản lý Transaction và xử lý Deadlock
-    private <T> T tx(Work<T> w) throws BusinessException {
-        try (Connection c = connections.getConnection()) {
-            boolean a = c.getAutoCommit();
-            int i = c.getTransactionIsolation();
+    private DataAccessException data(String message, SQLException exception) {
+        return new DataAccessException(message, exception);
+    }
+
+    private <T> T tx(Work<T> work) throws BusinessException {
+        try (Connection connection = connections.getConnection()) {
+            boolean autoCommit = connection.getAutoCommit();
+            int isolation = connection.getTransactionIsolation();
+
             try {
-                c.setAutoCommit(false);
-                c.setTransactionIsolation(Connection.TRANSACTION_SERIALIZABLE);
-                T x = w.run(c);
-                c.commit();
-                return x;
-            } catch (BusinessException e) {
-                rollback(c); throw e;
-            } catch (SQLException e) {
-                rollback(c); throw data("Transaction failed", e);
+                connection.setAutoCommit(false);
+                connection.setTransactionIsolation(
+                        Connection.TRANSACTION_SERIALIZABLE
+                );
+
+                T result = work.run(connection);
+                connection.commit();
+                return result;
+            } catch (BusinessException exception) {
+                rollback(connection);
+                throw exception;
+            } catch (SQLException exception) {
+                rollback(connection);
+                throw data("Lỗi giao dịch cơ sở dữ liệu.", exception);
             } finally {
-                try { c.setTransactionIsolation(i); c.setAutoCommit(a); } catch (SQLException ignored) {}
+                try {
+                    connection.setTransactionIsolation(isolation);
+                    connection.setAutoCommit(autoCommit);
+                } catch (SQLException ignored) {
+                    // Connection sẽ được đóng bởi try-with-resources.
+                }
             }
-        } catch (SQLException e) {
-            throw data("Unable to connect to database", e);
+        } catch (SQLException exception) {
+            throw data("Không thể kết nối cơ sở dữ liệu.", exception);
         }
     }
 
-    private void rollback(Connection c) { try { c.rollback(); } catch (SQLException ignored) {} }
+    private void rollback(Connection connection) {
+        try {
+            connection.rollback();
+        } catch (SQLException ignored) {
+            // Giữ exception gốc.
+        }
+    }
 
     @FunctionalInterface
-    private interface Work<T> { T run(Connection c) throws SQLException, BusinessException; }
+    private interface Work<T> {
+        T run(Connection connection) throws SQLException, BusinessException;
+    }
 }
